kubernetes/pro/00-redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (767ab4b)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
        volumeMounts:
          - name: redis-volume
            mountPath: /data
      volumes:
        - name: redis-volume
          gcePersistentDisk:
            pdName: redis-disk
            fsType: ext4
      restartPolicy: Always
status: {}
