kubernetes/pro/04-traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: api-glp.mipodo.com
    http:
      paths:
      - path: /impala
        backend:
          serviceName: impala-api-60002
          servicePort: impala-api-http
